[package]
edition = "2021"
name = "blue-number-resetter"
version = "0.1.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
fs-err.workspace = true
logging = { path = "../logging" }
uesave = "0.5.0"
tracing-subscriber.workspace = true
tracing.workspace = true
anyhow.workspace = true
tempfile.workspace = true
bidiff = "1"
